--- a/old.ipynb
+++ b/old.ipynb
@@ -513,9 +513,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.12",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "venv312"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -527,7 +527,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.2"
   }
  },
  "nbformat": 4,
