--- a/main.ipynb
+++ b/main.ipynb
@@ -71,6 +71,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd365f89-75ee-4748-9b29-22615a161acc",
+   "metadata": {},
+   "source": [
+    "## Processing Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "b20b2b38-8ae0-45d0-8c01-cd1a97afe163",
