--- a/main.ipynb
+++ b/main.ipynb
@@ -540,7 +540,9 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "52889ff4-113b-4abf-98a8-e1c1b5b7742e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1083,6 +1085,14 @@
     "X['ask0']= X['midpoint']*(1+X['asks_distance_0'])\n",
     "X['test']=(X['ask0']-X['midpoint'])/X['midpoint']\n",
     "X[['midpoint','bid0','ask0','test']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1582e794-aae1-4d8d-aaa9-28962efb9c13",
+   "metadata": {},
+   "source": [
+    "## EDA"
    ]
   },
   {
