--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -5,7 +5,16 @@
    "execution_count": 1,
    "id": "6a639d7b-e089-499b-82be-ee2e6ca0fb1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sc3791/myenv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import torch\n",
