--- a/main_v2.ipynb
+++ b/main_v2.ipynb
@@ -1350,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "d1309eb5-a7fd-43cb-b901-d1644aa50475",
    "metadata": {},
    "outputs": [
@@ -1358,50 +1358,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Batch 0/1250] Train Loss: 1.0082 | Train Accuracy: 0.4531\n",
-      "[Batch 500/1250] Train Loss: 0.9662 | Train Accuracy: 0.5000\n",
-      "[Batch 1000/1250] Train Loss: 1.0641 | Train Accuracy: 0.4766\n",
-      "Epoch 1/10: Train Loss 0.9855 | Train Acc 0.4952 | Val Loss 1.0039 | Val Acc 0.4815\n",
-      "✅ Saved best model at epoch 1 with Val Acc 0.4815\n",
-      "[Batch 0/1250] Train Loss: 1.0538 | Train Accuracy: 0.4141\n",
-      "[Batch 500/1250] Train Loss: 0.9799 | Train Accuracy: 0.4531\n",
-      "[Batch 1000/1250] Train Loss: 0.9791 | Train Accuracy: 0.4922\n",
-      "Epoch 2/10: Train Loss 0.9810 | Train Acc 0.4995 | Val Loss 0.9980 | Val Acc 0.4842\n",
-      "✅ Saved best model at epoch 2 with Val Acc 0.4842\n",
-      "[Batch 0/1250] Train Loss: 1.0422 | Train Accuracy: 0.4453\n",
-      "[Batch 500/1250] Train Loss: 0.9399 | Train Accuracy: 0.5625\n",
-      "[Batch 1000/1250] Train Loss: 0.9825 | Train Accuracy: 0.4375\n",
-      "Epoch 3/10: Train Loss 0.9775 | Train Acc 0.5050 | Val Loss 1.0108 | Val Acc 0.4805\n",
-      "[Batch 0/1250] Train Loss: 0.9378 | Train Accuracy: 0.5234\n",
-      "[Batch 500/1250] Train Loss: 0.9153 | Train Accuracy: 0.5625\n",
-      "[Batch 1000/1250] Train Loss: 1.0033 | Train Accuracy: 0.5391\n",
-      "Epoch 4/10: Train Loss 0.9745 | Train Acc 0.5064 | Val Loss 1.0065 | Val Acc 0.4834\n",
-      "[Batch 0/1250] Train Loss: 1.0072 | Train Accuracy: 0.5312\n",
-      "[Batch 500/1250] Train Loss: 0.9179 | Train Accuracy: 0.5391\n",
-      "[Batch 1000/1250] Train Loss: 0.9643 | Train Accuracy: 0.5000\n",
-      "Epoch 5/10: Train Loss 0.9725 | Train Acc 0.5084 | Val Loss 0.9936 | Val Acc 0.4898\n",
-      "✅ Saved best model at epoch 5 with Val Acc 0.4898\n",
-      "[Batch 0/1250] Train Loss: 0.9160 | Train Accuracy: 0.5703\n",
-      "[Batch 500/1250] Train Loss: 1.0191 | Train Accuracy: 0.4844\n",
-      "[Batch 1000/1250] Train Loss: 0.9197 | Train Accuracy: 0.5391\n",
-      "Epoch 6/10: Train Loss 0.9695 | Train Acc 0.5107 | Val Loss 0.9951 | Val Acc 0.4880\n",
-      "[Batch 0/1250] Train Loss: 0.9589 | Train Accuracy: 0.5312\n",
-      "[Batch 500/1250] Train Loss: 0.9490 | Train Accuracy: 0.5234\n",
-      "[Batch 1000/1250] Train Loss: 1.0608 | Train Accuracy: 0.3984\n",
-      "Epoch 7/10: Train Loss 0.9678 | Train Acc 0.5139 | Val Loss 0.9941 | Val Acc 0.4895\n",
-      "[Batch 0/1250] Train Loss: 0.9664 | Train Accuracy: 0.5703\n",
-      "[Batch 500/1250] Train Loss: 1.0346 | Train Accuracy: 0.4062\n",
-      "[Batch 1000/1250] Train Loss: 0.9326 | Train Accuracy: 0.5703\n",
-      "Epoch 8/10: Train Loss 0.9653 | Train Acc 0.5151 | Val Loss 0.9995 | Val Acc 0.4894\n",
-      "[Batch 0/1250] Train Loss: 0.9140 | Train Accuracy: 0.5391\n",
-      "[Batch 500/1250] Train Loss: 0.9109 | Train Accuracy: 0.5391\n",
-      "[Batch 1000/1250] Train Loss: 1.0009 | Train Accuracy: 0.4766\n",
-      "Epoch 9/10: Train Loss 0.9637 | Train Acc 0.5176 | Val Loss 0.9919 | Val Acc 0.4907\n",
-      "✅ Saved best model at epoch 9 with Val Acc 0.4907\n",
-      "[Batch 0/1250] Train Loss: 0.9374 | Train Accuracy: 0.5625\n",
-      "[Batch 500/1250] Train Loss: 1.0416 | Train Accuracy: 0.4844\n",
-      "[Batch 1000/1250] Train Loss: 0.9575 | Train Accuracy: 0.5391\n",
-      "Epoch 10/10: Train Loss 0.9616 | Train Acc 0.5200 | Val Loss 0.9949 | Val Acc 0.4892\n"
+      "[Batch 0/1250] Train Loss: 1.1047 | Train Accuracy: 0.4297\n",
+      "[Batch 500/1250] Train Loss: 1.0498 | Train Accuracy: 0.4844\n",
+      "[Batch 1000/1250] Train Loss: 1.0684 | Train Accuracy: 0.4219\n",
+      "Epoch 1/10: Train Loss 1.0608 | Train Acc 0.4163 | Val Loss 1.0513 | Val Acc 0.4302\n",
+      "✅ Saved best model at epoch 1 with Val Acc 0.4302\n",
+      "[Batch 0/1250] Train Loss: 1.0204 | Train Accuracy: 0.4688\n",
+      "[Batch 500/1250] Train Loss: 1.0053 | Train Accuracy: 0.4922\n",
+      "[Batch 1000/1250] Train Loss: 1.0335 | Train Accuracy: 0.5156\n",
+      "Epoch 2/10: Train Loss 1.0252 | Train Acc 0.4564 | Val Loss 1.0444 | Val Acc 0.4374\n",
+      "✅ Saved best model at epoch 2 with Val Acc 0.4374\n",
+      "[Batch 0/1250] Train Loss: 1.0718 | Train Accuracy: 0.4531\n",
+      "[Batch 500/1250] Train Loss: 1.0342 | Train Accuracy: 0.4688\n",
+      "[Batch 1000/1250] Train Loss: 1.0375 | Train Accuracy: 0.4062\n",
+      "Epoch 3/10: Train Loss 1.0110 | Train Acc 0.4700 | Val Loss 1.0241 | Val Acc 0.4612\n",
+      "✅ Saved best model at epoch 3 with Val Acc 0.4612\n",
+      "[Batch 0/1250] Train Loss: 0.9626 | Train Accuracy: 0.5859\n",
+      "[Batch 500/1250] Train Loss: 0.9935 | Train Accuracy: 0.4609\n",
+      "[Batch 1000/1250] Train Loss: 0.9602 | Train Accuracy: 0.5312\n",
+      "Epoch 4/10: Train Loss 1.0002 | Train Acc 0.4805 | Val Loss 1.0102 | Val Acc 0.4743\n",
+      "✅ Saved best model at epoch 4 with Val Acc 0.4743\n",
+      "[Batch 0/1250] Train Loss: 0.9546 | Train Accuracy: 0.5156\n",
+      "[Batch 500/1250] Train Loss: 0.9415 | Train Accuracy: 0.5391\n",
+      "[Batch 1000/1250] Train Loss: 0.9590 | Train Accuracy: 0.4688\n",
+      "Epoch 5/10: Train Loss 0.9934 | Train Acc 0.4878 | Val Loss 1.0026 | Val Acc 0.4810\n",
+      "✅ Saved best model at epoch 5 with Val Acc 0.4810\n",
+      "[Batch 0/1250] Train Loss: 0.9820 | Train Accuracy: 0.4844\n"
      ]
     }
    ],
