--- a/main_fi2010.ipynb
+++ b/main_fi2010.ipynb
@@ -231,7 +231,16 @@
    "execution_count": null,
    "id": "3683524d-5f16-4bf5-96f9-9efa15548ac7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50, Train Loss: 0.9378, Train Acc: 0.5895, Validation Loss: 0.9463, Validation Acc: 0.5802\n",
+      "Epoch 2/50, Train Loss: 0.8357, Train Acc: 0.7050, Validation Loss: 0.9234, Validation Acc: 0.6091\n"
+     ]
+    }
+   ],
    "source": [
     "epochs = 50\n",
     "learning_rate = 1e-4\n",
