--- a/main_fi2010.ipynb
+++ b/main_fi2010.ipynb
@@ -1013,21 +1013,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading:  Train_Dst_NoAuction_DecPre_CF_7.txt\n",
-      "Loading:  Test_Dst_NoAuction_DecPre_CF_7.txt\n",
-      "Loading:  Test_Dst_NoAuction_DecPre_CF_8.txt\n",
-      "Loading:  Test_Dst_NoAuction_DecPre_CF_9.txt\n",
-      "Training Data Size : 203404\n",
-      "Validation Data Size : 50851\n",
-      "Test Data Size : 138102\n"
+      "Loading:  Train_Dst_NoAuction_ZScore_CF_7.txt\n",
+      "Loading:  Test_Dst_NoAuction_ZScore_CF_7.txt\n",
+      "Loading:  Test_Dst_NoAuction_ZScore_CF_8.txt\n",
+      "Loading:  Test_Dst_NoAuction_ZScore_CF_9.txt\n",
+      "Training Data Size : 254000\n",
+      "Validation Data Size : 255\n",
+      "Test Data Size : 138102\n",
+      "Epoch 1/50, Train Loss: 1.0328, Train Acc: 0.4148, Validation Loss: 1.1235, Validation Acc: 0.3767\n",
+      "Epoch 2/50, Train Loss: 1.0118, Train Acc: 0.4287, Validation Loss: 1.1138, Validation Acc: 0.3801\n",
+      "Epoch 3/50, Train Loss: 0.9895, Train Acc: 0.4522, Validation Loss: 1.0650, Validation Acc: 0.4286\n",
+      "Epoch 4/50, Train Loss: 0.9674, Train Acc: 0.4723, Validation Loss: 1.0103, Validation Acc: 0.4827\n",
+      "Epoch 5/50, Train Loss: 0.9477, Train Acc: 0.4928, Validation Loss: 1.0205, Validation Acc: 0.4774\n",
+      "Epoch 6/50, Train Loss: 0.9299, Train Acc: 0.5126, Validation Loss: 0.9857, Validation Acc: 0.5110\n",
+      "Epoch 7/50, Train Loss: 0.9129, Train Acc: 0.5292, Validation Loss: 0.9554, Validation Acc: 0.5291\n",
+      "Epoch 8/50, Train Loss: 0.8973, Train Acc: 0.5441, Validation Loss: 0.9769, Validation Acc: 0.5161\n",
+      "Epoch 9/50, Train Loss: 0.8850, Train Acc: 0.5545, Validation Loss: 0.9509, Validation Acc: 0.5359\n",
+      "Epoch 10/50, Train Loss: 0.8739, Train Acc: 0.5669, Validation Loss: 0.9700, Validation Acc: 0.5199\n"
      ]
     }
    ],
    "source": [
     "epochs = 50\n",
     "learning_rate = 1e-4\n",
-    "\n",
-    "for normalization in ['DecPre','Zscore','MinMax']:\n",
+    "train_val_ratio = 0.999\n",
+    "for normalization in ['Zscore','DecPre','MinMax']:\n",
     "    for k in [4]: #[0,1,2,3,4]:\n",
     "        dataset_train, dataset_val, dataset_test = load_fi2010(train_val_ratio, normalization, stock, \n",
     "                                                           train_days, test_days, T, k, False)\n",
