--- a/test.ipynb
+++ b/test.ipynb
@@ -213,7 +213,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "e415f8db-4506-4437-b01c-79898e5771cf",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
