--- a/main_fi2010.ipynb
+++ b/main_fi2010.ipynb
@@ -1461,7 +1461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "d699c015-fa75-4ed6-94da-7498456b72ee",
    "metadata": {
     "scrolled": true
@@ -1476,33 +1476,33 @@
        "DeepTransLOB                             [1, 3]                    --\n",
        "├─LOBFeatureExtractor2D: 1-1             [1, 100, 64]              --\n",
        "│    └─Sequential: 2-1                   [1, 16, 100, 20]          --\n",
-       "│    │    └─Conv2d: 3-1                  [1, 16, 100, 20]          48\n",
+       "│    │    └─CausalConv2d: 3-1            [1, 16, 100, 20]          48\n",
        "│    │    └─LeakyReLU: 3-2               [1, 16, 100, 20]          --\n",
        "│    │    └─BatchNorm2d: 3-3             [1, 16, 100, 20]          32\n",
-       "│    │    └─Conv2d: 3-4                  [1, 16, 100, 20]          784\n",
+       "│    │    └─CausalConv2d: 3-4            [1, 16, 100, 20]          784\n",
        "│    │    └─LeakyReLU: 3-5               [1, 16, 100, 20]          --\n",
        "│    │    └─BatchNorm2d: 3-6             [1, 16, 100, 20]          32\n",
-       "│    │    └─Conv2d: 3-7                  [1, 16, 100, 20]          784\n",
+       "│    │    └─CausalConv2d: 3-7            [1, 16, 100, 20]          784\n",
        "│    │    └─LeakyReLU: 3-8               [1, 16, 100, 20]          --\n",
        "│    │    └─BatchNorm2d: 3-9             [1, 16, 100, 20]          32\n",
        "│    └─Sequential: 2-2                   [1, 32, 100, 10]          --\n",
-       "│    │    └─Conv2d: 3-10                 [1, 32, 100, 10]          1,056\n",
+       "│    │    └─CausalConv2d: 3-10           [1, 32, 100, 10]          1,056\n",
        "│    │    └─LeakyReLU: 3-11              [1, 32, 100, 10]          --\n",
        "│    │    └─BatchNorm2d: 3-12            [1, 32, 100, 10]          64\n",
-       "│    │    └─Conv2d: 3-13                 [1, 32, 100, 10]          3,104\n",
+       "│    │    └─CausalConv2d: 3-13           [1, 32, 100, 10]          3,104\n",
        "│    │    └─LeakyReLU: 3-14              [1, 32, 100, 10]          --\n",
        "│    │    └─BatchNorm2d: 3-15            [1, 32, 100, 10]          64\n",
-       "│    │    └─Conv2d: 3-16                 [1, 32, 100, 10]          3,104\n",
+       "│    │    └─CausalConv2d: 3-16           [1, 32, 100, 10]          3,104\n",
        "│    │    └─LeakyReLU: 3-17              [1, 32, 100, 10]          --\n",
        "│    │    └─BatchNorm2d: 3-18            [1, 32, 100, 10]          64\n",
        "│    └─Sequential: 2-3                   [1, 64, 100, 1]           --\n",
-       "│    │    └─Conv2d: 3-19                 [1, 64, 100, 1]           20,544\n",
+       "│    │    └─CausalConv2d: 3-19           [1, 64, 100, 1]           20,544\n",
        "│    │    └─LeakyReLU: 3-20              [1, 64, 100, 1]           --\n",
        "│    │    └─BatchNorm2d: 3-21            [1, 64, 100, 1]           128\n",
-       "│    │    └─Conv2d: 3-22                 [1, 64, 100, 1]           12,352\n",
+       "│    │    └─CausalConv2d: 3-22           [1, 64, 100, 1]           12,352\n",
        "│    │    └─LeakyReLU: 3-23              [1, 64, 100, 1]           --\n",
        "│    │    └─BatchNorm2d: 3-24            [1, 64, 100, 1]           128\n",
-       "│    │    └─Conv2d: 3-25                 [1, 64, 100, 1]           12,352\n",
+       "│    │    └─CausalConv2d: 3-25           [1, 64, 100, 1]           12,352\n",
        "│    │    └─LeakyReLU: 3-26              [1, 64, 100, 1]           --\n",
        "│    │    └─BatchNorm2d: 3-27            [1, 64, 100, 1]           128\n",
        "├─Linear: 1-2                            [1, 100, 63]              4,095\n",
@@ -1546,7 +1546,7 @@
        "=========================================================================================="
       ]
      },
-     "execution_count": 20,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1601,7 +1601,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Train Loss: 0.8909, Train Acc: 0.5450, Validation Loss: 0.8785, Validation Acc: 0.5815\n"
+      "Epoch 1/20, Train Loss: 0.8699, Train Acc: 0.5600, Validation Loss: 0.7888, Validation Acc: 0.6412\n"
      ]
     }
    ],
