--- a/main_results.ipynb
+++ b/main_results.ipynb
@@ -796,7 +796,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "0ce23ef1-537d-406b-bd78-aa03f867fb19",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
